@@ -3,6 +3,7 @@
 	* Added support for Record Access Rootline Elements
 	* Fixed an issue where empty facets were not detected correctly when using option showEmptyFacets
 	* Added new marker ###FACET_LINK.FACET_NAME###
+	* Fixed usage of extension key in DevLog calls
 
 2011-06-11  Ingo Renner  <ingo.renner@dkd.de>
 
